[package]
name = "prosafe_exporter"
version = "0.2.8-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/prosafe_exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus exporter for NETGEAR switches supported by ProSAFE Plus utility"
categories = ["network-programming", "web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "dalance/prosafe_exporter" }

[dependencies]
bincode      = "1.0.1"
combine      = "3.5.2"
failure      = "0.1.2"
lazy_static  = "1.4.0"
hyper        = "0.12.11"
interfaces2  = "0.0.5"
prometheus   = "0.4.2"
rand         = "0.6.4"
serde        = "1.0.79"
serde_derive = "1.0.79"
structopt    = "0.2.10"
toml         = "0.5.7"
url          = "2.2.0"

[dev-dependencies]
hex-literal = "0.1.1"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
