[package]
name = "prosafe_exporter"
version = "0.2.8-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/prosafe_exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus exporter for NETGEAR switches supported by ProSAFE Plus utility"
categories = ["network-programming", "web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "dalance/prosafe_exporter" }

[dependencies]
bincode      = "1"
combine      = "3"
failure      = "0.1"
lazy_static  = "1"
hyper        = "0.12"
interfaces   = "0.0.5"
prometheus   = "0.11"
rand         = "0.8"
serde        = "1"
serde_derive = "1"
structopt    = "0.3"
toml         = "0.5"
url          = "2"

[dev-dependencies]
hex-literal = "0.3"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
