[package]
name = "prosafe_exporter"
version = "0.2.9-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/prosafe_exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus exporter for NETGEAR switches supported by ProSAFE Plus utility"
categories = ["network-programming", "web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "dalance/prosafe_exporter" }

[dependencies]
bincode      = "1"
combine      = "3"
failure      = "0.1"
lazy_static  = "1"
hyper        = "0.12"
interfaces   = "0.0.8"
prometheus   = "0.13"
rand         = "0.8"
serde        = {version = "1.0", features = ["derive"]}
structopt    = "0.3"
toml         = "0.7"
url          = "2"

[dev-dependencies]
hex-literal = "0.4"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
